Foundational work for the CLJ parser.
Just getting setup to be able to write some real code with some really
basic tests in place.

--- a/atbuild.yaml
+++ b/atbuild.yaml
@@ -10,6 +10,15 @@ tasks:
         tool: "atllbuild"
         source: ["src/**.swift"]
         name: "atbuild"
+        
+    tests:
+        tool: "atllbuild"
+        source: ["src/clj/**.swift", "tests/**.swift"]
+        name: "tests"
+        
+    runtests:
+        tool: "shell"
+        script: "./.atllbuild/tests"
 
     bootstrap:
         tool: "atllbuild"
