--- a/atbuild.yaml
+++ b/atbuild.yaml
@@ -11,8 +11,16 @@ tasks:
         source: ["src/**.swift"]
         name: "atbuild"
 
-    bootstrap:
+    bootstrap-osx:
         tool: "atllbuild"
         source: ["src/**.swift"]
         name: "atbuild"
         bootstrapOnly: true
+        llbuildyaml: "llbuild-osx.yaml"
+
+    bootstrap-linux:
+        tool: "atllbuild"
+        source: ["src/**.swift"]
+        name: "atbuild"
+        bootstrapOnly: true
+        llbuildyaml: "llbuild-linux.yaml"
