Support for dependencies.
It's a little naive, but it works in simple cases.

Close #5

--- a/atbuild.yaml
+++ b/atbuild.yaml
@@ -25,3 +25,7 @@ tasks:
         bootstrapOnly: true
         llbuildyaml: "llbuild-linux.yaml"
         linkSDK: false
+
+    bootstrap:
+        tool: "nop"
+        dependency: ["bootstrap-osx", "bootstrap-linux"]
