--- a/atbuild.yaml
+++ b/atbuild.yaml
@@ -14,23 +14,47 @@ tasks:
         outputType: "executable"
         linkWithProduct: ["yaml.a"]
 
+    bootstrap-yaml-osx:
+        tool: "atllbuild"
+        source: ["parsers/yaml/**.swift"]
+        name: "yaml"
+        llbuildyaml: "yaml-osx-llbuild.yaml"
+        outputType: "static-library"
+        bootstrapOnly: true
+
+
+    bootstrap-yaml-linux:
+        tool: "atllbuild"
+        source: ["parsers/yaml/**.swift"]
+        name: "yaml"
+        llbuildyaml: "yaml-linux-llbuild.yaml"
+        outputType: "static-library"
+        linkSDK: false
+        compileOptions: ["-D","CORELIBS_FOUNDATION"]
+        bootstrapOnly: true
+
     bootstrap-osx:
         tool: "atllbuild"
-        source: ["cli/src/**.swift", "parsers/yaml/**.swift"]
+        source: ["cli/src/**.swift"]
         name: "atbuild"
         bootstrapOnly: true
         llbuildyaml: "llbuild-osx.yaml"
         outputType: "executable"
+        linkWithProduct: ["yaml.a"]
+        dependency: ["bootstrap-yaml-osx"]
 
     bootstrap-linux:
         tool: "atllbuild"
-        source: ["cli/src/**.swift", "parsers/yaml/**.swift"]
+        source: ["cli/src/**.swift"]
         name: "atbuild"
         bootstrapOnly: true
         llbuildyaml: "llbuild-linux.yaml"
         linkSDK: false
         compileOptions: ["-D","CORELIBS_FOUNDATION"]
         outputType: "executable"
+        linkWithProduct: ["yaml.a"]
+        dependency: ["bootstrap-yaml-linux"]
+
 
     bootstrap:
         tool: "nop"
