Significant refactoring to support the new atpkg format. The bootstrap scripts were also updated to build the entire product properly into libs; no more compiler flags. Project structure simplified to at* for each of our targets. The YAML parser completely removed.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ osx:
     stage: build
     script: 
         - export PATH=/Library/Developer/Toolchains/swift-latest.xctoolchain/usr/bin:"${PATH}"
-        - ./bootstrap.sh
+        - ./bootstrap/build.sh
     tags:
         - openswift
     artifacts:
