--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ linux:
         - docker build -t atbuild .
         - id=$(docker create atbuild)
         - mkdir bin
-        - docker cp $id:bin/atbuild bin/atbuild
+        - docker cp $id:atbuild/bin/atbuild bin/atbuild
         - docker rm -v $id
         - docker rmi atbuild
     tags:
