--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,17 +6,19 @@ before_script:
 linux:
     stage: build
     script:
-        - docker build -t atbuild .
-        - id=$(docker create atbuild)
-        - mkdir bin
-        - docker cp $id:atbuild/bin/atbuild bin/atbuild
-        - docker rm -v $id
-        - docker rmi atbuild
+        - apt-get update
+        - apt-get install --no-install-recommends xz-utils curl ca-certificates -y
+        - curl -L https://github.com/AnarchyTools/atbuild/releases/download/0.9.0/atbuild-0.9.0-linux.tar.xz | tar xJ -C /usr/local
+        - bootstrap/build.sh linux
+        - tests/test.sh
+        - mkdir atbuild-${CI_BUILD_REF_NAME}
+        - cp bin/atbuild atbuild-${CI_BUILD_REF_NAME}
+        - tar cJf tar cJf atbuild-${CI_BUILD_REF_NAME}-linux.tar.xz atbuild-${CI_BUILD_REF_NAME}
     tags:
-        - docker
+        - autoscale-linux
     artifacts:
         paths:
-            - bin
+            - atbuild-${CI_BUILD_REF_NAME}-linux.tar.xz
 
 osx:
     stage: build
@@ -24,8 +26,11 @@ osx:
         - export PATH=/Library/Developer/Toolchains/swift-latest.xctoolchain/usr/bin:"${PATH}"
         - ./bootstrap/build.sh
         - bin/atbuild check
+        - mkdir atbuild-${CI_BUILD_REF_NAME}
+        - cp bin/atbuild atbuild-${CI_BUILD_REF_NAME}
+        - tar cJf tar cJf atbuild-${CI_BUILD_REF_NAME}-osx.tar.xz atbuild-${CI_BUILD_REF_NAME}
     tags:
         - openswift
     artifacts:
         paths:
-            - bin/atbuild
+            - atbuild-${CI_BUILD_REF_NAME}-osx.tar.xz
