--- a/tests/fixtures/platforms/known-linux-bootstrap.yaml
+++ b/tests/fixtures/platforms/known-linux-bootstrap.yaml
@@ -16,7 +16,7 @@ commands:
      outputs: ["<atllbuild-swiftc>", ".atllbuild/objects/main.swift.o"]
      module-name: platforms
      module-output-path: .atllbuild/products/platforms.swiftmodule
-     temps-path: .atllbuild//llbuildtmp
+     temps-path: .atllbuild/llbuildtmp
      other-args: ["-j8", "-D", "ATBUILD", "-I", ".atllbuild/products/", "-D", "LINUX"]
   <atllbuild>:
     tool: shell
