Pick up tar/xz on linux
This was not supported earlier, but it is now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ linux:
         - autoscale-linux
     artifacts:
         paths:
-            - bin/atbuild.atbin
+            - bin/atbuild-*.tar.xz
             - bin/*.deb
     image: drewcrawford/swift:latest
 
