Add actual effects to the configurations
This extends #104 by adding actual effects to the configurations rather than have them be no-ops.

Effects include:

* debug instrumentation (new in this PR), for emitting `-g` (see #73 for an obvious extension)
* optimization control / WMO control
* compression level (faster debug atbins)
* test instrumentation (`-enable-testing`)
* `#if ATBUILD_RELEASE` etc. from Swift code

There are some deprecations associated with this PR:

* `whole-module-optimization` atllbuild option is now deprecated; use `--configuration release` instead.  There currently is no plan to control these separately, use `--configuration plain` + `:compileOptions ["-O"]` to get optimization without WMO.  Or open a bug to complain about this change.
* `magic` atllbuild option is now deprecated; to opt out of magic use `--configuration none` instead.

Doc PR to follow.

In addition, CI is now updated to produce release (optimized) builds for atbuild, which significantly optimizes atbuild performance.

--- a/tests/fixtures/platforms/known-osx-bootstrap.yaml
+++ b/tests/fixtures/platforms/known-osx-bootstrap.yaml
@@ -19,10 +19,10 @@ commands:
      module-name: platforms
      module-output-path: .atllbuild/products/platforms.swiftmodule
      temps-path: .atllbuild/llbuildtmp
-     other-args: ["-j8", "-D", "ATBUILD", "-I", ".atllbuild/products/", "-sdk", "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk", "-D", "OSX"]
+     other-args: ["-j8", "-D", "ATBUILD", "-I", ".atllbuild/products/", "-sdk", "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk", "-D", "OSX", "-g", "-DATBUILD_DEBUG"]
   <atllbuild>:
     tool: shell
     inputs: ["<atllbuild-swiftc>", ".atllbuild/objects/main.swift.o"]
     outputs: ["<atllbuild>", ".atllbuild/products/platforms"]
-    args: ["/Library/Developer/Toolchains/swift-latest.xctoolchain/usr/bin/swiftc", "-o", ".atllbuild/products/platforms", ".atllbuild/objects/main.swift.o", "-Xlinker", "-dead_strip"]
+    args: ["/Library/Developer/Toolchains/swift-latest.xctoolchain/usr/bin/swiftc", "-o", ".atllbuild/products/platforms", ".atllbuild/objects/main.swift.o"]
     description: Linking executable .atllbuild/products/platforms
