Add support for C language to atllbuild
This PR lets you mix .swift, .h, and .c files all in the same atllbuild task.  It works a lot like Xcode's behavior, if you've used that.

\# Rationale

I feel the need to defend this feature, since I have been previously on the record as saying "the entire value is debatable" (https://www.mail-archive.com/swift-evolution@swift.org/msg01829.html).

There are 5 cases where I think it makes sense to add a little C to your Swift project:

* To use the odd feature Swift doesn't support.  Recently, I needed to call a variadic C function; Swift cannot call them, C is our only hope
* To work around a Swift compiler bug.  Several of my projects have this case.
* To repackage an existing Xcode project where somebody used C in it.  I have not investigated and don't want to investigate whether that somebody was sane or insane, but we should at least be able to build their project.
* To include headers from a system C library.  SwiftPM tries to solve this with module maps, however it doesn't hide the implementation details https://bugs.swift.org/browse/SR-655.  This feature can actually hide them with a few different methods discussed below, which is a clear win.
* To write Swift bindings for a C library.  This generally involves a little C glue code (such as using a header or something), and for reasons that will become clear, using our C support is better than previous approaches at that problem.

\# Rationale-NOT:

Additional rationale:

* SwiftPM will probably add this eventually
* per #113, we should be a superset of their functionality

I would like to be very clear about my goals:

* This is really only designed for the case of "need a little C in your Swift project", not anything larger
* This is not a replacement for e.g. GNU Make or a general-purpose C buildsystem, nor will it become one
* The preferred mechanism for building a real C library is shelling out to your real C buildsystem
* Nobody should be repackaging their establi

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ linux:
     stage: build
     script:
         - apt-get update
-        - apt-get install -y xz-utils package-deb
+        - apt-get install -y xz-utils package-deb libcurl4-openssl-dev
         - git submodule update --init --recursive
         - bootstrap/build.sh linux
         - bin/atbuild check
